src/objects/BT_CO_Batch_Run_Request__c.object
<CustomObject>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interface_ID__c</fullName>
        <label>Interface ID</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>BT_CO_Batch_Run_Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BRR-{0000000000}</displayFormat>
        <label>Batch Run Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BT_CO_Batch_Run_Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>